[project]
name = "pyeodhd"
version = "0.0.1"
authors = [
  { name="Juan Ramos" },
]
description = "Python library that is used to communicated with EODHD APIs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ptjuanramos/pyeodhd"
Issues = "https://github.com/ptjuanramos/pyeodhd/issues"